--- a/belonging/index.html
+++ b/belonging/index.html
@@ -81,7 +81,7 @@
 
     <div class="list">
       <ul>
-        <h2>寮生用サイト一覧</h2>
+        <h2 style="border-bottom: solid 3px #d59649;display: inline-block;">寮生用サイト一覧</h2>
         <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/dormitory/kondate.pdf">
           <li>寮の献立</li>
         </a>
