--- a/html/cost.html
+++ b/html/cost.html
@@ -36,12 +36,6 @@
   <!--タイトル-->
   <meta property="og:locale" content="ja_JP" />
   <!--言語設定-->
-  <style>
-    #container .table-header {
-      padding: 3px;
-      border-bottom: solid 2px #fb5144;
-    }
-  </style>
 </head>
 
 <body>
@@ -83,7 +77,7 @@
   </div>
   <!--container-->
   <div id="container" class="middle">
-    <h1>学寮経費</h1>
+    <h1 style="border-bottom: solid 3px #d59649;display: inline-block;">学寮経費</h1>
     <table>
       <tr>
         <th><span class="table-header">寄宿料</span></th>
