--- a/html/contact.html
+++ b/html/contact.html
@@ -97,6 +97,7 @@
   <!--container-->
   <div id="container">
 
+    <h2 class="middle"><span style="border-bottom: solid 3px #d59649;">お問い合わせ</span></h2>
     <p class="middle">ご質問、ご意見等ございましたら、学生寮までお寄せください。</p>
     <div id="contact">
       <p>学寮連絡先<br>〒745-8585 山口県周南市学園台<br>TEL&FAX : 0834-29-6236<br><br>学生課 寮務係<br>TEL : 0834-29-6231<br>
