--- a/en/it.html
+++ b/en/it.html
@@ -51,15 +51,31 @@
       }
     }
 
-    .message {
-      margin-left: 10vw;
-      margin-top: 200px;
-      font-size: 54px;
-      line-height: 1.92;
+    @media screen and (max-width: 870px) {
+      .message {
+        word-break: break-word;
+        margin-left: 2vw;
+        margin-top: 100px;
+        font-size: 36px;
+        line-height: 1.92;
+      }
+    }
+
+    @media screen and (min-width: 870px) {
+      .message {
+        margin-left: 10vw;
+        margin-top: 200px;
+        font-size: 54px;
+        line-height: 1.92;
+      }
     }
 
     .message p {
       margin: 0;
+    }
+
+    .content {
+      font-size: 21px;
     }
   </style>
 </head>
@@ -104,10 +120,20 @@
       </ul>
     </nav>
   </div>
-  <!--container-->
   <div id="container">
+    <div class="message">
+      <p style="margin-bottom: 100px">
+        <span class="TextTyping">Writing code.</span><br>
+        <span class="TextTyping">Building Server.</span><br>
+        <span class="TextTyping">From a little interest to infinite possibilities.</span>
+      </p>
+    </div>
+    <div class="content">
+      <p class="TextTyping">At Takajo dormitory, we are actively working on the use of information technology.</p>
+      <p class="TextTyping">We also provide full support for dormitory students who are interested in IT.</p>
+      <a href="https://github.com/TakajoDormitory" target="_blank">高城寮GitHub</a>
+    </div>
   </div>
-
   <!--footer-->
   <div class="footer">
     <img src="../img/footer.png">
@@ -119,6 +145,7 @@
 
   <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
   <script src="../script/common.js"></script>
+  <script src="../script/typing.js"></script>
   <!--JS取り込み-->
 </body>
 
