fix sentences on English pages

--- a/en/belonging/index.html
+++ b/en/belonging/index.html
@@ -23,7 +23,7 @@
   <!--簡易説明-->
   <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/" />
   <!--URL指定-->
-  <meta property="og:title" content="寮生用ページ | 高城寮" />
+  <meta property="og:title" content="Students page | Takajo dormitory" />
   <!--タイトル-->
   <meta property="og:type" content="website">
   <meta property="og:description" content="寮公式ホームページです。" />
@@ -32,7 +32,7 @@
   <!--サイトアイコンURL-->
   <meta name="twitter:card" content="summary" />
   <meta property="twitter:site" content="@TakajoDormitory">
-  <meta property="og:site_name" content="寮生用ページ | 高城寮" />
+  <meta property="og:site_name" content="Students page | Takajo dormitory" />
   <!--タイトル-->
   <meta property="og:locale" content="ja_JP" />
   <!--言語設定-->
