--- a/en/contact.html
+++ b/en/contact.html
@@ -32,7 +32,7 @@
   <!--サイトアイコンURL-->
   <meta name="twitter:card" content="summary" />
   <meta property="twitter:site" content="@TakajoDormitory">
-  <meta property="og:site_name" content="お問い合わせ | 高城寮" />
+  <meta property="og:site_name" content="Contact us | Takajo dormitory" />
   <!--タイトル-->
   <meta property="og:locale" content="ja_JP" />
   <!--言語設定-->
