--- a/en/index.html
+++ b/en/index.html
@@ -53,7 +53,7 @@
     <i class="fas fa-search"></i>
   </header>
   <div id="video-area">
-    <h1>WELCOME TO TAKAJO</h1>
+    <h1>TAKAJO DORMITORY</h1>
     <video id="video" poster="../img/OverViewSky.JPG" autoplay playsinline muted="muted" loop="loop" preload="none">
       <source src="../video/overView.MP4" type="video/mp4">
     </video>
@@ -99,10 +99,10 @@
       <div id="department">
         <h1><span class="title">Endeavors</span></h1>
         <a href="studying.html">
-          <h3><i class="fas fa-graduation-cap"></i> Support Education</h3>
+          <h3><i class="fas fa-graduation-cap"></i> Educationnal Support</h3>
         </a>
         <a href="env.html">
-          <h3><i class="fas fa-broom"></i> Improve LivingEnv</h3>
+          <h3><i class="fas fa-broom"></i> Living Environment</h3>
         </a>
         <a href="meet.html">
           <h3><i class="fas fa-futbol"></i> Exchange Event</h3>
@@ -159,9 +159,9 @@
 
 
     <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
-    <script src="../script/index.js"></script>
-    <!--JS取り込み-->
     <script src="../script/common.js"></script>
+    <!--JS取り込み-->
+    <script src="../script/index.js"></script>
     <!--JS取り込み-->
     <script src="../script/slider.js"></script>
     <!--JS取り込み-->
