--- a/en/studying.html
+++ b/en/studying.html
@@ -17,22 +17,22 @@
   <!--文字セット-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Contact us | Takajo dormitory</title>
+  <title>Educationnal Support | Takajo dormitory</title>
   <!--タイトル-->
   <meta name="description" content="高城寮公式ホームページです。">
   <!--簡易説明-->
   <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/" />
   <!--URL指定-->
-  <meta property="og:title" content="Contact us | Takajo dormitory" />
+  <meta property="og:title" content="Educationnal Support | Takajo dormitory" />
   <!--タイトル-->
   <meta property="og:type" content="website">
   <meta property="og:description" content="高城寮公式ホームページです。" />
   <!--簡易説明-->
-  <meta property="og:image" content="https://github.com/TakajoDormitory/HomePage/blob/master/img/icon.png" />
+  <meta property="og:image" content="https://github.com/TakajoDormitory/HomePage/blob/main/img/icon.png" />
   <!--サイトアイコンURL-->
   <meta name="twitter:card" content="summary" />
   <meta property="twitter:site" content="@TakajoDormitory">
-  <meta property="og:site_name" content="お問い合わせ | 高城寮" />
+  <meta property="og:site_name" content="Educationnal Support | Takajo dormitory" />
   <!--タイトル-->
   <meta property="og:locale" content="ja_JP" />
   <!--言語設定-->
