--- a/en/index.html
+++ b/en/index.html
@@ -99,7 +99,7 @@
       <div id="department">
         <h1><span class="title">Endeavors</span></h1>
         <a href="studying.html">
-          <h3><i class="fas fa-graduation-cap"></i> Educationnal Support</h3>
+          <h3><i class="fas fa-graduation-cap"></i> Educational Support</h3>
         </a>
         <a href="env.html">
           <h3><i class="fas fa-broom"></i> Living Environment</h3>
