--- a/html/notice/20201023-1.html
+++ b/html/notice/20201023-1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-<head>
+<head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb#">
 
   <!-- 以下のすべてのタイトルを変更 -->
   <title>寮内Wi-FiのAP交換および光回線の増設について | 高城寮</title>
@@ -27,6 +27,8 @@
   <!--文字セット-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="keywords" content="高城寮">
+  <!--キーワード-->
   <meta name="description" content="高城寮公式ホームページです。">
   <!--簡易説明-->
   <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/" />
