--- a/en/index.html
+++ b/en/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb#">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
   <!--Googleフォント-->
   <link rel="stylesheet" href="../style/common.css" type="text/css">
@@ -21,7 +21,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Takajo dormitory</title>
   <!--タイトル-->
-  <meta name="description" content="Official HomePage of Takajo Dormitory.">
+  <meta name="keywords" content="Takajo dormitory,高城寮">
+  <!--キーワード-->
+  <meta name="description" content="The official site of takajo dormitory">
   <!--簡易説明-->
   <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/" />
   <!--URL指定-->
