--- a/html/contact.html
+++ b/html/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-<head>
+<head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb#">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
   <!--Googleフォント-->
   <link rel="stylesheet" href="../style/common.css" type="text/css">
@@ -24,7 +24,8 @@
   <!--タイトル-->
   <meta property="og:title" content="お問い合わせ | 高城寮" />
   <!--タイトル-->
-
+  <meta name="keywords" content="高城寮">
+  <!--キーワード-->
   <meta name="description" content="高城寮公式ホームページです。">
   <!--簡易説明-->
   <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/" />
