--- a/html/event.html
+++ b/html/event.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-<head>
+<head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb#">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
   <!--Googleフォント-->
   <link rel="stylesheet" href="../style/common.css" type="text/css">
@@ -19,6 +19,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>寮生活 | 高城寮</title>
   <!--タイトル-->
+  <meta name="keywords" content="高城寮">
+  <!--キーワード-->
   <meta name="description" content="高城寮公式ホームページです。">
   <!--簡易説明-->
   <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/" />
