update thumbnail image

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </header>
   <div id="video-area">
     <h1>WELCOME TO TAKAJO</h1>
-    <video id="video" poster="img/OverViewSky.JPG" autoplay playsinline muted="muted" loop="loop" preload="none">
+    <video id="video" poster="img/Thumbnail.png" autoplay playsinline muted="muted" loop="loop" preload="none">
       <source src="video/overView.MP4" type="video/mp4">
     </video>
   </div>
