--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb#">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
   <!--Googleフォント-->
-  <link rel="stylesheet" href="style/common.css" type="text/css">
+  <link rel="stylesheet" href="assets/styles/common.css" type="text/css">
   <!--共通CSS-->
-  <link rel="stylesheet" href="style/index.css" type="text/css">
+  <link rel="stylesheet" href="assets/styles/index.css" type="text/css">
   <!--index用CSS-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
-  <link rel="icon" href="img/icon.png" sizes="32x32" />
+  <link rel="icon" href="assets/images/icon.png" sizes="32x32" />
   <!--サイトアイコン-->
-  <link rel="icon" href="img/icon.png" sizes="192x192" />
+  <link rel="icon" href="assets/images/icon.png" sizes="192x192" />
   <!--サイトアイコン-->
-  <link rel="apple-touch-icon-precomposed" href="img\icon.png" />
+  <link rel="apple-touch-icon-precomposed" href="assets/images/icon.png" />
   <!--Apple用サイトアイコン-->
   <meta charset="utf-8">
   <!--文字セット-->
@@ -32,7 +32,7 @@
   <meta property="og:type" content="website">
   <meta property="og:description" content="高城寮公式ホームページです。" />
   <!--簡易説明-->
-  <meta property="og:image" content="https://github.com/TakajoDormitory/HomePage/blob/dev/img\icon.png" />
+  <meta property="og:image" content="https://github.com/TakajoDormitory/HomePage/blob/dev/assets/images/icon.png" />
   <!--サイトアイコンURL-->
   <meta name="twitter:card" content="summary" />
   <meta property="twitter:site" content="@TakajoDormitory">
@@ -48,16 +48,16 @@
     <a href="#">
       <h1 id="title">Takajo Dormitory</h1>
     </a>
-    <a href="en/index.html">
+    <a href="pages/english/index.html">
       <h1 id="lang">ENGLISH</h1>
     </a>
-    <a href="html/location.html"><i class="fas fa-map-marker-alt"></i></a>
+    <a href="pages/location.html"><i class="fas fa-map-marker-alt"></i></a>
     <i class="fas fa-search"></i>
   </header>
   <div id="video-area">
     <h1>WELCOME TO TAKAJO</h1>
-    <video id="video" poster="img/Thumbnail.png" autoplay playsinline muted="muted" loop="loop" preload="none">
-      <source src="video/overView.MP4" type="video/mp4">
+    <video id="video" poster="assets/images/Thumbnail.png" autoplay playsinline muted="muted" loop="loop" preload="none">
+      <source src="assets/movies/overView.MP4" type="video/mp4">
     </video>
   </div>
 
@@ -73,15 +73,15 @@
           <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
           <div class="gcse-search"></div>
         </div>
-        <li><a href="en/index.html">
+        <li><a href="pages/english/index.html">
             <h3 class="lang">ENGLISH</h3>
           </a></li>
-        <li><a href="html/purpose.html">寮の目的</a></li>
-        <li><a href="html/facility.html">施設,設備</a></li>
-        <li><a href="html/event.html">寮生活</a></li>
-        <li><a href="html/cost.html">学寮経費</a></li>
-        <li><a href="belonging/index.html">寮生用ページ</a></li>
-        <li><a href="html/contact.html">お問い合わせ</a></li>
+        <li><a href="pages/purpose.html">寮の目的</a></li>
+        <li><a href="pages/facility.html">施設,設備</a></li>
+        <li><a href="pages/event.html">寮生活</a></li>
+        <li><a href="pages/cost.html">学寮経費</a></li>
+        <li><a href="pages/student.html">寮生用ページ</a></li>
+        <li><a href="pages/contact.html">お問い合わせ</a></li>
       </ul>
     </nav>
   </div>
@@ -99,19 +99,19 @@
       </div>
       <div id="department">
         <h1><span class="title">寮の取り組み</span></h1>
-        <a href="html/studying.html">
+        <a href="pages/endeavors/studying.html">
           <h3><i class="fas fa-graduation-cap"></i> 学習面のサポート</h3>
         </a>
-        <a href="html/env.html">
+        <a href="pages/endeavors/env.html">
           <h3><i class="fas fa-broom"></i> 寮内環境の整備</h3>
         </a>
-        <a href="html/meet.html">
+        <a href="pages/endeavors/meet.html">
           <h3><i class="fas fa-futbol"></i> 寮生同士の交流</h3>
         </a>
-        <a href="html/safety.html">
+        <a href="pages/endeavors/safety.html">
           <h3><i class="fas fa-running"></i> 安全の確保</h3>
         </a>
-        <a href="html/it.html">
+        <a href="pages/endeavors/it.html">
           <h3><i class="fas fa-laptop-code"></i> 情報技術の活用</h3>
         </a>
       </div>
@@ -126,7 +126,7 @@
       <p id="arrow-prev" class="arrow">←</p>
       <p id="arrow-next" class="arrow">→</p>
     </div>
-    <p id="slider-content">学寮行事である寮生マッチや七夕会などを通じて、寮生どうしの親交が深まります。また、大人数でも快適に生活できるよう、設備が整備されています。<br><a href="html/event.html">学寮行事→</a></p>
+    <p id="slider-content">学寮行事である寮生マッチや七夕会などを通じて、寮生どうしの親交が深まります。また、大人数でも快適に生活できるよう、設備が整備されています。<br><a href="pages/event.html">学寮行事→</a></p>
 
     <div id="movie">
       <h2><span>Short Movie</span></h2>
@@ -152,8 +152,8 @@
   <!--footer-->
   <div class="footer">
 
-    <img src="img/footer.png">
-    <a href="html/site.html">
+    <img src="assets/images/footer.png">
+    <a href="pages/site.html">
       <p><span id="site">このサイトについて</span></p>
     </a>
     <p id="copyright">© 2020-2021 TakajoDormitory All Rights Reserved.</p>
@@ -161,10 +161,10 @@
 
 
 
-  <script type="text/javascript" src="script/jquery-3.5.1.min.js"></script> <!-- jquery -->
-  <script src="script/common.js"></script>
+  <script type="text/javascript" src="assets/scripts/jquery-3.5.1.min.js"></script> <!-- jquery -->
+  <script src="assets/scripts/common.js"></script>
   <!--JS取り込み-->
-  <script src="script/index.js"></script>
+  <script src="assets/scripts/index.js"></script>
   <!--JS取り込み-->
 </body>
 
