--- a/pages/english/index.html
+++ b/pages/english/index.html
@@ -4,16 +4,16 @@
 <head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb#">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
   <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css">
+  <link rel="stylesheet" href="../../assets/styles/common.css" type="text/css">
   <!--共通CSS-->
-  <link rel="stylesheet" href="../style/index.css" type="text/css">
+  <link rel="stylesheet" href="../../assets/styles/index.css" type="text/css">
   <!--index用CSS-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
-  <link rel="icon" href="../img/icon.png" sizes="32x32" />
+  <link rel="icon" href="../../assets/images/icon.png" sizes="32x32" />
   <!--サイトアイコン-->
-  <link rel="icon" href="../Img/icon.png" sizes="192x192" />
+  <link rel="icon" href="../../assets/images/icon.png" sizes="192x192" />
   <!--サイトアイコン-->
-  <link rel="apple-touch-icon-precomposed" href="../img/icon.png" />
+  <link rel="apple-touch-icon-precomposed" href="../../assets/images/icon.png" />
   <!--Apple用サイトアイコン-->
   <meta charset="utf-8">
   <!--文字セット-->
@@ -32,7 +32,7 @@
   <meta property="og:type" content="website">
   <meta property="og:description" content="Official HomePage of Takajo Dormitory." />
   <!--簡易説明-->
-  <meta property="og:image" content="https://github.com/TakajoDormitory/HomePage/blob/master/../img/icon.png" />
+  <meta property="og:image" content="https://github.com/TakajoDormitory/HomePage/blob/master/assets/images/icon.png" />
   <!--サイトアイコンURL-->
   <meta name="twitter:card" content="summary" />
   <meta property="twitter:site" content="@TakajoDormitory">
@@ -48,7 +48,7 @@
     <a href="#">
       <h1 id="title">Takajo Dormitory</h1>
     </a>
-    <a href="../index.html">
+    <a href="../../index.html">
       <h1 id="lang">JAPANESE</h3>
     </a>
     <a href="location.html"><i class="fas fa-map-marker-alt"></i></a>
@@ -56,8 +56,8 @@
   </header>
   <div id="video-area">
     <h1>TAKAJO DORMITORY</h1>
-    <video id="video" poster="../img/Thumbnail.png" autoplay playsinline muted="muted" loop="loop" preload="none">
-      <source src="../video/overView.MP4" type="video/mp4">
+    <video id="video" poster="../../assets/images/Thumbnail.png" autoplay playsinline muted="muted" loop="loop" preload="none">
+      <source src="../../assets/movies/overView.MP4" type="video/mp4">
     </video>
   </div>
   <div id="wrapper">
@@ -72,7 +72,7 @@
           <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
           <div class="gcse-search"></div>
         </div>
-        <li><a href="../index.html">
+        <li><a href="../../index.html">
             <h3 class="lang">JAPANESE</h3>
           </a></li>
         <li><a href="location.html">
@@ -82,7 +82,7 @@
         <li><a href="facility.html">Facility</a></li>
         <li><a href="event.html">Life and Event</a></li>
         <li><a href="cost.html">About cost</a></li>
-        <li><a href="belonging/index.html">Students page</a></li>
+        <li><a href="student.html">Students page</a></li>
         <li><a href="contact.html">Contact us</a></li>
       </ul>
     </nav>
@@ -152,7 +152,7 @@
 
     <!--footer-->
     <div class="footer">
-      <img src="../img/footer.png">
+      <img src="../../assets/images/footer.png">
       <a href="site.html">
         <p><span id="site">About this site</span></p>
       </a>
@@ -160,10 +160,10 @@
     </div>
 
 
-    <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
-    <script src="../script/common.js"></script>
+    <script type="text/javascript" src="../../assets/scripts/jquery-3.5.1.min.js"></script> <!-- jquery -->
+    <script src="../../assets/scripts/common.js"></script>
     <!--JS取り込み-->
-    <script src="../script/index.js"></script>
+    <script src="../../assets/scripts/index.js"></script>
     <!--JS取り込み-->
 </body>
 
