--- a/pages/english/purpose.html
+++ b/pages/english/purpose.html
@@ -4,14 +4,14 @@
 <head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb#">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
   <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css">
+  <link rel="stylesheet" href="../../assets/styles/common.css" type="text/css">
   <!--共通CSS-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
-  <link rel="icon" href="../img/icon.png" sizes="32x32" />
+  <link rel="icon" href="../../assets/images/icon.png" sizes="32x32" />
   <!--サイトアイコン-->
-  <link rel="icon" href="../Img/icon.png" sizes="192x192" />
+  <link rel="icon" href="../../assets/images/icon.png" sizes="192x192" />
   <!--サイトアイコン-->
-  <link rel="apple-touch-icon-precomposed" href="../img/icon.png" />
+  <link rel="apple-touch-icon-precomposed" href="../../assets/images/icon.png" />
   <!--Apple用サイトアイコン-->
   <meta charset="utf-8">
   <!--文字セット-->
@@ -47,7 +47,7 @@
     <a href="index.html">
       <h1 id="title">Takajo Dormitory</h1>
     </a>
-    <a href="../index.html">
+    <a href="../../index.html">
       <h1 id="lang">JAPANESE</h3>
     </a>
     <a href="location.html"><i class="fas fa-map-marker-alt"></i></a>
@@ -65,7 +65,7 @@
           <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
           <div class="gcse-search"></div>
         </div>
-        <li><a href="../index.html">
+        <li><a href="../../index.html">
             <h3 class="lang">JAPANESE</h3>
           </a></li>
         <li><a href="location.html">
@@ -75,7 +75,7 @@
         <li><a href="facility.html">Facility</a></li>
         <li><a href="event.html">Life and Event</a></li>
         <li><a href="cost.html">About cost</a></li>
-        <li><a href="belonging/index.html">Students page</a></li>
+        <li><a href="student.html">Students page</a></li>
         <li><a href="contact.html">Contact us</a></li>
       </ul>
     </nav>
@@ -83,7 +83,7 @@
   <!--container-->
   <div id="container">
     <div class="pair-right">
-      <img src="../img/OverView.jpg">
+      <img src="../../assets/images/OverView.jpg">
       <div>
         <h4>Purpose</h4>
         <p class="right-content">　The purpose of this dormitory is to contribute to the achievement of educational goals by providing convenience to students in
@@ -120,7 +120,7 @@
             effective use of their time.</p>
         </div>
       </div>
-      <img class="Vertically-img" src="../img/RadioCalisthenics.png">
+      <img class="Vertically-img" src="../../assets/images/RadioCalisthenics.png">
     </div>
     <h4>Status of Takajo Dormitory</h4>
     <div class="content">
@@ -141,15 +141,15 @@
 
   <!--footer-->
   <div class="footer">
-    <img src="../img/footer.png">
+    <img src="../../assets/images/footer.png">
     <a href="site.html">
       <p><span id="site">About this site</span></p>
     </a>
     <p id="copyright">© 2020-2021 TakajoDormitory All Rights Reserved.</p>
   </div>
 
-  <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
-  <script src="../script/common.js"></script>
+  <script type="text/javascript" src="../../assets/scripts/jquery-3.5.1.min.js"></script> <!-- jquery -->
+  <script src="../../assets/scripts/common.js"></script>
   <!--JS取り込み-->
 </body>
 
