--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,14 +4,14 @@
 <head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb#">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
   <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css">
+  <link rel="stylesheet" href="../assets/styles/common.css" type="text/css">
   <!--共通CSS-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
-  <link rel="icon" href="../img/icon.png" sizes="32x32" />
+  <link rel="icon" href="../assets/images/icon.png" sizes="32x32" />
   <!--サイトアイコン-->
-  <link rel="icon" href="../img/icon.png" sizes="192x192" />
+  <link rel="icon" href="../assets/images/icon.png" sizes="192x192" />
   <!--サイトアイコン-->
-  <link rel="apple-touch-icon-precomposed" href="../img/icon.png" />
+  <link rel="apple-touch-icon-precomposed" href="../assets/images/icon.png" />
   <!--Apple用サイトアイコン-->
   <meta charset="utf-8">
   <!--文字セット-->
@@ -64,7 +64,7 @@
     <a href="../index.html">
       <h1 id="title">Takajo Dormitory</h1>
     </a>
-    <a href="../en/index.html">
+    <a href="english/index.html">
       <h1 id="lang">ENGLISH</h1>
     </a>
     <a href="location.html"><i class="fas fa-map-marker-alt"></i></a>
@@ -83,21 +83,20 @@
           <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
           <div class="gcse-search"></div>
         </div>
-        <li><a href="../en/index.html">
+        <li><a href="english/index.html">
             <h3 class="lang">ENGLISH</h3>
           </a></li>
         <li><a href="purpose.html">寮の目的</a></li>
         <li><a href="facility.html">施設,設備</a></li>
         <li><a href="event.html">寮生活</a></li>
         <li><a href="cost.html">学寮経費</a></li>
-        <li><a href="../belonging/index.html">寮生用ページ</a></li>
+        <li><a href="student.html">寮生用ページ</a></li>
         <li><a href="contact.html">お問い合わせ</a></li>
       </ul>
     </nav>
   </div>
   <!--container-->
   <div id="container">
-
     <h2 class="middle"><span style="border-bottom: solid 3px #d59649;">お問い合わせ</span></h2>
     <p class="middle">ご質問、ご意見等ございましたら、学生寮までお寄せください。</p>
     <div id="contact">
@@ -109,15 +108,15 @@
 
   <!--footer-->
   <div class="footer">
-    <img src="../img/footer.png">
+    <img src="../assets/images/footer.png">
     <a href="site.html">
       <p><span id="site">このサイトについて</span></p>
     </a>
     <p id="copyright">© 2020-2021 TakajoDormitory All Rights Reserved.</p>
   </div>
 
-  <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
-  <script src="../script/common.js"></script>
+  <script type="text/javascript" src="../assets/scripts/jquery-3.5.1.min.js"></script> <!-- jquery -->
+  <script src="../assets/scripts/common.js"></script>
   <!--JS取り込み-->
 </body>
 
