--- a/pages/endeavors/safety.html
+++ b/pages/endeavors/safety.html
@@ -4,14 +4,14 @@
 <head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb#">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
   <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css">
+  <link rel="stylesheet" href="../../assets/styles/common.css" type="text/css">
   <!--共通CSS-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
-  <link rel="icon" href="../img/icon.png" sizes="32x32" />
+  <link rel="icon" href="../../assets/images/icon.png" sizes="32x32" />
   <!--サイトアイコン-->
-  <link rel="icon" href="../Img/icon.png" sizes="192x192" />
+  <link rel="icon" href="../../assets/images/icon.png" sizes="192x192" />
   <!--サイトアイコン-->
-  <link rel="apple-touch-icon-precomposed" href="../img/icon.png" />
+  <link rel="apple-touch-icon-precomposed" href="../../assets/images/icon.png" />
   <!--Apple用サイトアイコン-->
   <meta charset="utf-8">
   <!--文字セット-->
@@ -43,13 +43,13 @@
 <body>
   <!--header-->
   <header id="header">
-    <a href="../index.html">
+    <a href="../../index.html">
       <h1 id="title">Takajo Dormitory</h1>
     </a>
-    <a href="../en/index.html">
+    <a href="../english/index.html">
       <h1 id="lang">ENGLISH</h1>
     </a>
-    <a href="location.html"><i class="fas fa-map-marker-alt"></i></a>
+    <a href="../location.html"><i class="fas fa-map-marker-alt"></i></a>
     <i class="fas fa-search"></i>
   </header>
 
@@ -65,15 +65,15 @@
           <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
           <div class="gcse-search"></div>
         </div>
-        <li><a href="../en/index.html">
+        <li><a href="../english/index.html">
             <h3 class="lang">ENGLISH</h3>
           </a></li>
-        <li><a href="purpose.html">寮の目的</a></li>
-        <li><a href="facility.html">施設,設備</a></li>
-        <li><a href="event.html">寮生活</a></li>
-        <li><a href="cost.html">学寮経費</a></li>
-        <li><a href="../belonging/index.html">寮生用ページ</a></li>
-        <li><a href="contact.html">お問い合わせ</a></li>
+        <li><a href="../purpose.html">寮の目的</a></li>
+        <li><a href="../facility.html">施設,設備</a></li>
+        <li><a href="../event.html">寮生活</a></li>
+        <li><a href="../cost.html">学寮経費</a></li>
+        <li><a href="../student.html">寮生用ページ</a></li>
+        <li><a href="../contact.html">お問い合わせ</a></li>
       </ul>
     </nav>
   </div>
@@ -84,15 +84,15 @@
 
   <!--footer-->
   <div class="footer">
-    <img src="../img/footer.png">
-    <a href="site.html">
+    <img src="../../assets/images/footer.png">
+    <a href="../site.html">
       <p><span id="site">このサイトについて</span></p>
     </a>
     <p id="copyright">© 2020-2021 TakajoDormitory All Rights Reserved.</p>
   </div>
 
-  <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
-  <script src="../script/common.js"></script>
+  <script type="text/javascript" src="../../assets/scripts/jquery-3.5.1.min.js"></script> <!-- jquery -->
+  <script src="../../assets/scripts/common.js"></script>
   <!--JS取り込み-->
 </body>
 
