--- a/pages/english/facility.html
+++ b/pages/english/facility.html
@@ -4,14 +4,14 @@
 <head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb#">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
   <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css">
+  <link rel="stylesheet" href="../../assets/styles/common.css" type="text/css">
   <!--共通CSS-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
-  <link rel="icon" href="../img/icon.png" sizes="32x32" />
+  <link rel="icon" href="../../assets/images/icon.png" sizes="32x32" />
   <!--サイトアイコン-->
-  <link rel="icon" href="../Img/icon.png" sizes="192x192" />
+  <link rel="icon" href="../../assets/images/icon.png" sizes="192x192" />
   <!--サイトアイコン-->
-  <link rel="apple-touch-icon-precomposed" href="../img/icon.png" />
+  <link rel="apple-touch-icon-precomposed" href="../../assets/images/icon.png" />
   <!--Apple用サイトアイコン-->
   <meta charset="utf-8">
   <!--文字セット-->
@@ -62,7 +62,7 @@
     <a href="index.html">
       <h1 id="title">Takajo Dormitory</h1>
     </a>
-    <a href="../index.html">
+    <a href="../../index.html">
       <h1 id="lang">JAPANESE</h3>
     </a>
     <a href="location.html"><i class="fas fa-map-marker-alt"></i></a>
@@ -80,7 +80,7 @@
           <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
           <div class="gcse-search"></div>
         </div>
-        <li><a href="../index.html">
+        <li><a href="../../index.html">
             <h3 class="lang">JAPANESE</h3>
           </a></li>
         <li><a href="location.html">
@@ -90,7 +90,7 @@
         <li><a href="facility.html">Facility</a></li>
         <li><a href="event.html">Life and Event</a></li>
         <li><a href="cost.html">About cost</a></li>
-        <li><a href="belonging/index.html">Students page</a></li>
+        <li><a href="student.html">Students page</a></li>
         <li><a href="contact.html">Contact us</a></li>
       </ul>
     </nav>
@@ -98,33 +98,33 @@
   <!--container-->
   <div id="container">
     <h1>Facility</h1>
-    <div><img id="top_image" src="../img/OverView.jpg" alt="Overview of the dormitory."></div>
-    <img src="../img/Facility/SingleRoom.jpg" alt="Image of a single room.">
-    <img src="../img/Facility/DoubleRoom.jpg" alt="Image of the two-person room.">
-    <img src="../img/Facility/KitchenSpace.jpg" alt="Image of the kitchen space.">
-    <img src="../img/Facility/LearningRoom.jpg" alt="Image of the learning space.">
-    <img src="../img/Facility/ShowerRoom.jpg" alt="Image of the shower room.">
-    <img src="../img/Facility/Bath" alt="Image of the bathroom.">
-    <img src="../img/Facility/WashingRoom" alt="Image of the laundry area.">
-    <img src="../img/Facility/Cafeteria" alt="Image of the cafeteria.">
-    <img src="../img/Facility/Bookshelf" alt="Image of Bookshelf">
-    <img src="../img/Facility/PC" alt="Image of PC,printer">
-    <img src="../img/Facility/3DPrinter" alt="Image of 3D printer">
-    <img src="../img/Facility/ElectricBicycle" alt="Image of electric bicycles.">
-    <img src="../img/Facility/BicycleSpace" alt="Image of bicycle parking lot.">
+    <div><img id="top_image" src="../../assets/images/OverView.jpg" alt="Overview of the dormitory."></div>
+    <img src="../../assets/images/Facility/SingleRoom.jpg" alt="Image of a single room.">
+    <img src="../../assets/images/Facility/DoubleRoom.jpg" alt="Image of the two-person room.">
+    <img src="../../assets/images/Facility/KitchenSpace.jpg" alt="Image of the kitchen space.">
+    <img src="../../assets/images/Facility/LearningRoom.jpg" alt="Image of the learning space.">
+    <img src="../../assets/images/Facility/ShowerRoom.jpg" alt="Image of the shower room.">
+    <img src="../../assets/images/Facility/Bath" alt="Image of the bathroom.">
+    <img src="../../assets/images/Facility/WashingRoom" alt="Image of the laundry area.">
+    <img src="../../assets/images/Facility/Cafeteria" alt="Image of the cafeteria.">
+    <img src="../../assets/images/Facility/Bookshelf" alt="Image of Bookshelf">
+    <img src="../../assets/images/Facility/PC" alt="Image of PC,printer">
+    <img src="../../assets/images/Facility/3DPrinter" alt="Image of 3D printer">
+    <img src="../../assets/images/Facility/ElectricBicycle" alt="Image of electric bicycles.">
+    <img src="../../assets/images/Facility/BicycleSpace" alt="Image of bicycle parking lot.">
   </div>
 
   <!--footer-->
   <div class="footer">
-    <img src="../img/footer.png">
+    <img src="../../assets/images/footer.png">
     <a href="site.html">
       <p><span id="site">About this site</span></p>
     </a>
     <p id="copyright">© 2020-2021 TakajoDormitory All Rights Reserved.</p>
   </div>
 
-  <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
-  <script src="../script/common.js"></script>
+  <script type="text/javascript" src="../../assets/scripts/jquery-3.5.1.min.js"></script> <!-- jquery -->
+  <script src="../../assets/scripts/common.js"></script>
   <!--JS取り込み-->
 </body>
 
