--- a/pages/notice/20201022-1.html
+++ b/pages/notice/20201022-1.html
@@ -15,14 +15,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
   <!--Googleフォント-->
-  <link rel="stylesheet" href="../../style/common.css" type="text/css">
+  <link rel="stylesheet" href="../../assets/styles/common.css" type="text/css">
   <!--共通CSS-->
-  <link href="https://use.fwesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
-  <link rel="icon" href="../../img/icon.png" sizes="32x32" />
+  <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
+  <link rel="icon" href="../../assets/images/icon.png" sizes="32x32" />
   <!--サイトアイコン-->
-  <link rel="icon" href="../../Img/icon.png" sizes="192x192" />
+  <link rel="icon" href="../../assets/images/icon.png" sizes="192x192" />
   <!--サイトアイコン-->
-  <link rel="apple-touch-icon-precomposed" href="../img/icon.png" />
+  <link rel="apple-touch-icon-precomposed" href="../../assets/images/icon.png" />
   <!--Apple用サイトアイコン-->
   <meta charset="utf-8">
   <!--文字セット-->
@@ -49,13 +49,13 @@
 
   <!--header-->
   <header id="header">
-    <a href="../index.html">
+    <a href="../../index.html">
       <h1 id="title">Takajo Dormitory</h1>
     </a>
-    <a href="../en/index.html">
+    <a href="../english/index.html">
       <h1 id="lang">ENGLISH</h3>
     </a>
-    <a href="location.html"><i class="fas fa-map-marker-alt"></i></a>
+    <a href="../location.html"><i class="fas fa-map-marker-alt"></i></a>
     <i class="fas fa-search"></i>
   </header>
 
@@ -71,15 +71,15 @@
           <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
           <div class="gcse-search"></div>
         </div>
-        <li><a href="../en/index.html">
+        <li><a href="../english/index.html">
             <h3 class="lang">ENGLISH</h3>
           </a></li>
-        <li><a href="purpose.html">寮の目的</a></li>
-        <li><a href="facility.html">施設,設備</a></li>
-        <li><a href="event.html">寮生活</a></li>
-        <li><a href="cost.html">学寮経費</a></li>
-        <li><a href="../belonging/index.html">寮生用ページ</a></li>
-        <li><a href="contact.html">お問い合わせ</a></li>
+        <li><a href="../purpose.html">寮の目的</a></li>
+        <li><a href="../facility.html">施設,設備</a></li>
+        <li><a href="../event.html">寮生活</a></li>
+        <li><a href="../cost.html">学寮経費</a></li>
+        <li><a href="../student.html">寮生用ページ</a></li>
+        <li><a href="../contact.html">お問い合わせ</a></li>
       </ul>
     </nav>
   </div>
@@ -87,35 +87,38 @@
   <div id="container">
 
     <!-- mainの中に内容を記述 -->
-    <div class="main">
-      <h3>2020/10/22</h3>
-      <h2>寮のホームページのリニューアルについて</h2>
-      <p>高城寮公式ホームページ(当サイト)がリニューアルしました！<br>デザインが一新したほか、キーワード検索機能、コンテンツの増加、寮生用ページの追加などが行われました。</p>
-
-      <!-- 以下は編集しない -->
-      <div id="share">
-        <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a>
-        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <div class="fb-like" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
-        <div id="fb-root"></div>
+    <div class="content">
+      <h3 id="date">2020/10/22</h3>
+      <div id="titleWrapper">
+        <h2 id="title">寮のホームページのリニューアルについて</h2>
       </div>
+      <p>高城寮公式ホームページ(当サイト)がリニューアルしました！<br>デザインが一新したほか、キーワード検索機能、コンテンツの増加、寮生用ページの追加などが行われました。</p>
+    </div>
+
+    <!-- 以下は編集しない -->
+    <div id="share">
+      <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <div class="fb-like" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
+      <div id="fb-root"></div>
       <div class="line-it-button" data-lang="ja" data-type="share-a" data-ver="3" data-color="default" data-size="small" data-count="true"
-        style="display: none;"></div>
+        style="display: none;">
+      </div>
       <script src="https://www.line-website.com/social-plugins/js/thirdparty/loader.min.js" async="async" defer="defer"></script>
     </div>
   </div>
   <!--footer-->
   <div class="footer">
-    <img src="../img/footer.png">
-    <a href="site.html">
+    <img src="../../assets/images/footer.png">
+    <a href="../site.html">
       <p><span id="site">このサイトについて</span></p>
     </a>
     <p id="copyright">© 2020-2021 TakajoDormitory All Rights Reserved.</p>
   </div>
 
-  <script type="text/javascript" src="../../script/jquery-3.5.1.min.js"></script>
+  <script type="text/javascript" src="../../assets/scripts/jquery-3.5.1.min.js"></script>
   <!-- jquery -->
-  <script src="../../script/common.js"></script>
+  <script src="../../assets/scripts/common.js"></script>
   <!--JS取り込み-->
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v8.0" nonce="R07SGm58"></script>
 </body>
