fix og:image URL

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -33,7 +33,7 @@
   <meta property="og:type" content="website">
   <meta property="og:description" content="高城寮公式ホームページです。" />
   <!--簡易説明-->
-  <meta property="og:image" content="https://www.tokuyama.ac.jp/dormitory/img/icon.png" />
+  <meta property="og:image" content="https://github.com/TakajoDormitory/HomePage/assets/images/icon.png" />
   <!--サイトアイコンURL-->
   <meta name="twitter:card" content="summary" />
   <meta property="twitter:site" content="@TakajoDormitory">
