--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!--サイトアイコン-->
   <link rel="icon" href="assets/images/icon.png" sizes="192x192" />
   <!--サイトアイコン-->
-  <link rel="apple-touch-icon-precomposed" href="assets/images/icon.png" />
+  <link rel="apple-touch-icon-precomposed" href="assets/images/apple-touch-icon.png" />
   <!--Apple用サイトアイコン-->
   <meta charset="utf-8">
   <!--文字セット-->
