hide scroll bar,update facility page,and more

--- a/pages/english/facility.html
+++ b/pages/english/facility.html
@@ -3,56 +3,27 @@
 
 <head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb#">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
-  <!--Googleフォント-->
   <link rel="stylesheet" href="../../assets/styles/common.css" type="text/css">
-  <!--共通CSS-->
+  <link rel="stylesheet" href="../../assets/styles/facility.css" type="text/css">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../../assets/images/icon.png" sizes="32x32" />
-  <!--サイトアイコン-->
   <link rel="icon" href="../../assets/images/icon.png" sizes="192x192" />
-  <!--サイトアイコン-->
   <link rel="apple-touch-icon-precomposed" href="../../assets/images/icon.png" />
-  <!--Apple用サイトアイコン-->
   <meta charset="utf-8">
-  <!--文字セット-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Facility | Takajo dormitory</title>
-  <!--タイトル-->
   <meta name="keywords" content="Takajo dormitory,高城寮">
-  <!--キーワード-->
   <meta name="description" content="The official site of takajo dormitory">
-  <!--簡易説明-->
   <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/" />
-  <!--URL指定-->
   <meta property="og:title" content="Facility | Takajo dormitory" />
-  <!--タイトル-->
   <meta property="og:type" content="website">
   <meta property="og:description" content="寮公式ホームページです。" />
-  <!--簡易説明-->
-  <meta property="og:image" content="https://TakajoDormitory.github.io/HomePage/assets/images/icon.png" />
-  <!--サイトアイコンURL-->
+  <meta property="og:image" content="https://TakajoDormitory.github.io/HomePage/assets/images/open_graph.png" />
   <meta name="twitter:card" content="summary" />
   <meta property="twitter:site" content="@TakajoDormitory">
   <meta property="og:site_name" content="Facility | Takajo dormitory" />
-  <!--タイトル-->
   <meta property="og:locale" content="ja_JP" />
-  <!--言語設定-->
-  <style>
-    @media screen and (min-width: 870px) {
-      #top_image {
-        width: 800px;
-        margin: auto;
-      }
-    }
-
-    @media screen and (max-width: 870px) {
-      #top_image {
-        width: 80vw;
-        margin: auto;
-      }
-    }
-  </style>
 </head>
 
 <body>
@@ -97,21 +68,69 @@
   </div>
   <!--container-->
   <div id="container">
-    <h1>Facility</h1>
-    <div><img id="top_image" src="../../assets/images/OverView.jpg" alt="Overview of the dormitory."></div>
-    <img src="../../assets/images/Facility/SingleRoom.jpg" alt="Image of a single room.">
-    <img src="../../assets/images/Facility/DoubleRoom.jpg" alt="Image of the two-person room.">
-    <img src="../../assets/images/Facility/KitchenSpace.jpg" alt="Image of the kitchen space.">
-    <img src="../../assets/images/Facility/LearningRoom.jpg" alt="Image of the learning space.">
-    <img src="../../assets/images/Facility/ShowerRoom.jpg" alt="Image of the shower room.">
-    <img src="../../assets/images/Facility/Bath" alt="Image of the bathroom.">
-    <img src="../../assets/images/Facility/WashingRoom" alt="Image of the laundry area.">
-    <img src="../../assets/images/Facility/Cafeteria" alt="Image of the cafeteria.">
-    <img src="../../assets/images/Facility/Bookshelf" alt="Image of Bookshelf">
-    <img src="../../assets/images/Facility/PC" alt="Image of PC,printer">
-    <img src="../../assets/images/Facility/3DPrinter" alt="Image of 3D printer">
-    <img src="../../assets/images/Facility/ElectricBicycle" alt="Image of electric bicycles.">
-    <img src="../../assets/images/Facility/BicycleSpace" alt="Image of bicycle parking lot.">
+    <h4>Facility</h4>
+    <div class="facility">
+      <div class=" facility_element">
+        <p>Single Room</p>
+        <img src="../../assets/images/Facility/SingleRoom.jpg" alt="Image of a single room.">
+      </div>
+      <div class=" facility_element">
+        <p>Two-person Room</p>
+        <img src="../../assets/images/Facility/DoubleRoom.jpg" alt="Image of the two-person room.">
+      </div>
+      <div class=" facility_element">
+        <p>Kitchen Space</p>
+        <img src="../../assets/images/Facility/KitchenSpace.jpg" alt="Image of the kitchen space.">
+      </div>
+      <div class=" facility_element">
+        <p>Learning Space</p>
+        <img src="../../assets/images/Facility/LearningRoom.jpg" alt="Image of the learning space.">
+      </div>
+      <div class=" facility_element">
+        <p>Shower Room</p>
+        <img src="../../assets/images/Facility/ShowerRoom.jpg" alt="Image of the shower room.">
+      </div>
+      <div class=" facility_element">
+        <p>Bath Room</p>
+        <img src="../../assets/images/Facility/Bath.jpg" alt="Image of the bathroom.">
+      </div>
+      <div class=" facility_element">
+        <p>Laundry Area</p>
+        <img src="../../assets/images/Facility/WashingRoom.jpg" alt="Image of the laundry area.">
+      </div>
+      <div class=" facility_element">
+        <p>Cafeteria</p>
+        <img src="../../assets/images/Facility/Cafeteria.jpg" alt="Image of the cafeteria.">
+      </div>
+      <div class=" facility_element">
+        <p>Bookshelf</p>
+        <img src="../../assets/images/Facility/Bookshelf.jpg" alt="Image of Bookshelf">
+      </div>
+      <div class=" facility_element">
+        <p>PC</p>
+        <img src="../../assets/images/Facility/PC.jpg" alt="Image of PC">
+      </div>
+      <div class=" facility_element">
+        <p>Printer</p>
+        <img src="../../assets/images/Facility/Printer.jpg" alt="Image of Printer">
+      </div>
+      <div class=" facility_element">
+        <p>3D Printer</p>
+        <img src="../../assets/images/Facility/3DPrinter" alt="Image of 3D printer">
+      </div>
+      <div class=" facility_element">
+        <p>Electric Bicycles</p>
+        <img src="../../assets/images/Facility/ElectricBicycle.jpg" alt="Image of electric bicycles.">
+      </div>
+      <div class=" facility_element">
+        <p>Bicycle Parking lot</p>
+        <img src="../../assets/images/Facility/BicycleSpace.jpg" alt="Image of bicycle parking lot.">
+      </div>
+      <div class=" facility_element">
+        <p>Vending Machine</p>
+        <img src="../../assets/images/Facility/VendingMachine.jpg" alt="自動販売機の画像">
+      </div>
+    </div>
   </div>
 
   <!--footer-->
