--- a/pages/english/site.html
+++ b/pages/english/site.html
@@ -3,41 +3,26 @@
 
 <head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb#">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
-  <!--Googleフォント-->
   <link rel="stylesheet" href="../../assets/styles/common.css" type="text/css">
-  <!--共通CSS-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../../assets/images/icon.png" sizes="32x32" />
-  <!--サイトアイコン-->
   <link rel="icon" href="../../assets/images/icon.png" sizes="192x192" />
-  <!--サイトアイコン-->
   <link rel="apple-touch-icon-precomposed" href="../../assets/images/icon.png" />
-  <!--Apple用サイトアイコン-->
   <meta charset="utf-8">
-  <!--文字セット-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>About this site | Takajo dormitory</title>
-  <!--タイトル-->
   <meta name="keywords" content="Takajo dormitory,高城寮">
-  <!--キーワード-->
   <meta name="description" content="The official site of takajo dormitory">
-  <!--簡易説明-->
   <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/" />
-  <!--URL指定-->
   <meta property="og:title" content="About this site | Takajo dormitory" />
-  <!--タイトル-->
   <meta property="og:type" content="website">
   <meta property="og:description" content="寮公式ホームページです。" />
-  <!--簡易説明-->
-  <meta property="og:image" content="https://TakajoDormitory.github.io/HomePage/assets/images/icon.png" />
-  <!--サイトアイコンURL-->
+  <meta property="og:image" content="https://TakajoDormitory.github.io/HomePage/assets/images/open_graph.png" />
   <meta name="twitter:card" content="summary" />
   <meta property="twitter:site" content="@TakajoDormitory">
   <meta property="og:site_name" content="About this site | Takajo dormitory" />
-  <!--タイトル-->
   <meta property="og:locale" content="ja_JP" />
-  <!--言語設定-->
 </head>
 
 <body>
@@ -82,10 +67,36 @@
   </div>
   <!--container-->
   <div id="container">
+    <h1 class="middle">About this site</h1>
+    <h4>Purpose</h4>
+    <p class="content"> The purpose of the website established and operated by Takajo Dormitory of Tokuyama College of Technology is to publicize the activities
+      both inside and outside of the dormitory, and to provide information to support the lives of the dormitory students.
+    </p>
+    <h4>Production</h4>
+    <p class="content"> This website was created by dormitory students as a project for the 2020~2021 "Ideas for making Takajo dormitory a more livable place to
+      live" project.<br>
+      The source code for the homepage is available on GitHub.<a target="_blank" href="https://github.com/TakajoDormitory/HomePage">source code</a><br>
+      In addition, the Takajo dormitory actively supports the use of information technology by its residents.For more information, please see <a
+        href="endeavors/it.html">Utilization of Information Technology page.</a></p>
+    <h4>Copyright</h4>
+    <p class="content">The copyright of the content provided by the Takajo Dormitory website belongs to the dormitory.
+      Except within the scope of copyright law, secondary use such as copying, reproduction, diversion, or sale is prohibited without the permission of Takajo
+      Dormitory.
+    </p>
+    <h4>Disclaimer</h4>
+    <p class="content">Information on Takajo dormitory website is subject to change or deletion without prior notice.
+      Although every effort has been made to ensure the accuracy of the information on this website, Takajo dormitory is not responsible for any disadvantages
+      caused by the information on this website.
+    </p>
+    <h4>Link</h4>
+    <p class="content">You are free to link to the Takajo dormitory website, but we will not notify you about the change or deletion of the url. However, we
+      will not notify you of any changes or deletion of the URL. Also, links from sites that are contrary to the purpose of the activities of Takajo dormitory
+      (offensive to public order and morals, concerns about legality, etc.) are prohibited. Please do not link to this site.
+    </p>
   </div>
   <!--footer-->
   <div class="footer">
-    <img src="../../assets/images/icon.png/footer.png">
+    <img src="../../assets/images/footer.png">
     <a href="site.html">
       <p><span id="site">About this site</span></p>
     </a>
