--- a/pages/facility.html
+++ b/pages/facility.html
@@ -3,43 +3,27 @@
 
 <head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb#">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
-  <!--Googleフォント-->
   <link rel="stylesheet" href="../assets/styles/common.css" type="text/css">
-  <!--共通CSS-->
+  <link rel="stylesheet" href="../assets/styles/facility.css" type="text/css">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../assets/images/icon.png" sizes="32x32" />
-  <!--サイトアイコン-->
   <link rel="icon" href="../assets/images/icon.png" sizes="192x192" />
-  <!--サイトアイコン-->
   <link rel="apple-touch-icon-precomposed" href="../assets/images/apple-touch-icon.png" />
-  <!--Apple用サイトアイコン-->
   <meta charset="utf-8">
-  <!--文字セット-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>施設,設備 | 高城寮</title>
-  <!--タイトル-->
   <meta name="keywords" content="高城寮">
-  <!--キーワード-->
   <meta name="description" content="寮公式ホームページです。">
-  <!--簡易説明-->
   <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/" />
-  <!--URL指定-->
   <meta property="og:title" content="施設,設備 | 高城寮" />
-  <!--タイトル-->
   <meta property="og:type" content="website">
   <meta property="og:description" content="寮公式ホームページです。" />
-  <!--簡易説明-->
-  <meta property="og:image" content="https://TakajoDormitory.github.io/HomePage/assets/images/icon.png" />
-  <!--サイトアイコンURL-->
+  <meta property="og:image" content="https://TakajoDormitory.github.io/HomePage/assets/images/open_graph.png" />
   <meta name="twitter:card" content="summary" />
   <meta property="twitter:site" content="@TakajoDormitory">
   <meta property="og:site_name" content="施設,設備 | 高城寮" />
-  <!--タイトル-->
   <meta property="og:locale" content="ja_JP" />
-  <!--言語設定-->
-  <style>
-  </style>
 </head>
 
 <body>
@@ -81,51 +65,82 @@
   </div>
   <!--container-->
   <div id="container">
-    <div class="content">
-      <h4>設備</h4>
-      <ul>
-        <li><img src="../assets/images/Facility/SingleRoom.jpg" alt="一人部屋の画像"></li>
+    <h4>設備</h4>
+    <div class="facility">
+      <div class=" facility_element">
         <p>一人部屋</p>
-        <li><img src="../assets/images/Facility/DoubleRoom.jpg" alt="二人部屋の画像"></li>
+        <img src="../assets/images/Facility/SingleRoom.jpg" alt="一人部屋の画像">
+      </div>
+      <div class=" facility_element">
         <p>二人部屋</p>
-        <li><img src="../assets/images/Facility/KitchenSpace.jpg" alt="キッチンスペースの画像"></li>
+        <img src="../assets/images/Facility/DoubleRoom.jpg" alt="二人部屋の画像">
+      </div>
+      <div class=" facility_element">
         <p>キッチンスペース</p>
-        <li><img src="../assets/images/Facility/LearningRoom.jpg" alt="ラーニングスペースの画像"></li>
+        <img src="../assets/images/Facility/KitchenSpace.jpg" alt="キッチンスペースの画像">
+      </div>
+      <div class=" facility_element">
         <p>ラーニングスペース</p>
-        <li><img src="../assets/images/Facility/ShowerRoom.jpg" alt="シャワー室の画像"></li>
+        <img src="../assets/images/Facility/LearningRoom.jpg" alt="ラーニングスペースの画像">
+      </div>
+      <div class=" facility_element">
         <p>シャワー室</p>
-        <li><img src="../assets/images/Facility/Bath" alt="浴室の画像"></li>
+        <img src="../assets/images/Facility/ShowerRoom.jpg" alt="シャワー室の画像">
+      </div>
+      <div class=" facility_element">
         <p>浴室</p>
-        <li><img src="../assets/images/Facility/WashingRoom" alt="洗濯場の画像"></li>
+        <img src="../assets/images/Facility/Bath.jpg" alt="浴室の画像">
+      </div>
+      <div class=" facility_element">
         <p>洗濯場</p>
-        <li><img src="../assets/images/Facility/Cafeteria" alt="食堂の画像"></li>
+        <img src="../assets/images/Facility/WashingRoom.jpg" alt="洗濯場の画像">
+      </div>
+      <div class=" facility_element">
         <p>食堂</p>
-        <li><img src="../assets/images/Facility/Bookshelf" alt="本棚の画像"></li>
+        <img src="../assets/images/Facility/Cafeteria.jpg" alt="食堂の画像">
+      </div>
+      <div class=" facility_element">
         <p>本棚</p>
-        <li><img src="../assets/images/Facility/PC" alt="食堂のPC,プリンタの画像"></li>
-        <p>PC,プリンタ</p>
-        <li><img src="../assets/images/Facility/3DPrinter" alt="3Dプリンタの画像"></li>
+        <img src="../assets/images/Facility/Bookshelf.jpg" alt="本棚の画像">
+      </div>
+      <div class=" facility_element">
+        <p>PC</p>
+        <img src="../assets/images/Facility/PC.jpg" alt="PCの画像">
+      </div>
+      <div class=" facility_element">
+        <p>プリンタ</p>
+        <img src="../assets/images/Facility/Printer.jpg" alt="プリンタの画像">
+      </div>
+      <div class=" facility_element">
         <p>3Dプリンタ</p>
-        <li><img src="../assets/images/Facility/ElectricBicycle" alt="電動自転車の画像"></li>
+        <img src="../assets/images/Facility/3DPrinter" alt="3Dプリンタの画像">
+      </div>
+      <div class=" facility_element">
         <p>電動自転車</p>
-        <li><img src="../assets/images/Facility/BicycleSpace" alt="駐輪場の画像"></li>
+        <img src="../assets/images/Facility/ElectricBicycle.jpg" alt="電動自転車の画像">
+      </div>
+      <div class=" facility_element">
         <p>駐輪場</p>
-      </ul>
+        <img src="../assets/images/Facility/BicycleSpace.jpg" alt="駐輪場の画像">
+      </div>
+      <div class=" facility_element">
+        <p>自動販売機</p>
+        <img src="../assets/images/Facility/VendingMachine.jpg" alt="自動販売機の画像">
+      </div>
     </div>
-  </div>
 
-  <!--footer-->
-  <div class="footer">
-    <img src="../assets/images/footer.png">
-    <a href="site.html">
-      <p><span id="site">このサイトについて</span></p>
-    </a>
-    <p id="copyright">© 2020-2021 TakajoDormitory All Rights Reserved.</p>
-  </div>
+    <!--footer-->
+    <div class="footer">
+      <img src="../assets/images/footer.png">
+      <a href="site.html">
+        <p><span id="site">このサイトについて</span></p>
+      </a>
+      <p id="copyright">© 2020-2021 TakajoDormitory All Rights Reserved.</p>
+    </div>
 
-  <script type="text/javascript" src="../assets/scripts/jquery-3.5.1.min.js"></script> <!-- jquery -->
-  <script src="../assets/scripts/common.js"></script>
-  <!--JS取り込み-->
+    <script type="text/javascript" src="../assets/scripts/jquery-3.5.1.min.js"></script> <!-- jquery -->
+    <script src="../assets/scripts/common.js"></script>
+    <!--JS取り込み-->
 </body>
 
 </html>
