add 3DPrinter image,fix bug

--- a/pages/english/facility.html
+++ b/pages/english/facility.html
@@ -116,7 +116,7 @@
       </div>
       <div class=" facility_element">
         <p>3D Printer</p>
-        <img src="../../assets/images/Facility/3DPrinter" alt="Image of 3D printer">
+        <img src="../../assets/images/Facility/3DPrinter.jpg" alt="Image of 3D printer">
       </div>
       <div class=" facility_element">
         <p>Electric Bicycles</p>
