--- a/pages/facility.html
+++ b/pages/facility.html
@@ -113,7 +113,7 @@
       </div>
       <div class=" facility_element">
         <p>3Dプリンタ</p>
-        <img src="../assets/images/Facility/3DPrinter" alt="3Dプリンタの画像">
+        <img src="../assets/images/Facility/3DPrinter.jpg" alt="3Dプリンタの画像">
       </div>
       <div class=" facility_element">
         <p>電動自転車</p>
@@ -128,19 +128,20 @@
         <img src="../assets/images/Facility/VendingMachine.jpg" alt="自動販売機の画像">
       </div>
     </div>
+  </div>
 
-    <!--footer-->
-    <div class="footer">
-      <img src="../assets/images/footer.png">
-      <a href="site.html">
-        <p><span id="site">このサイトについて</span></p>
-      </a>
-      <p id="copyright">© 2020-2021 TakajoDormitory All Rights Reserved.</p>
-    </div>
+  <!--footer-->
+  <div class="footer">
+    <img src="../assets/images/footer.png">
+    <a href="site.html">
+      <p><span id="site">このサイトについて</span></p>
+    </a>
+    <p id="copyright">© 2020-2021 TakajoDormitory All Rights Reserved.</p>
+  </div>
 
-    <script type="text/javascript" src="../assets/scripts/jquery-3.5.1.min.js"></script> <!-- jquery -->
-    <script src="../assets/scripts/common.js"></script>
-    <!--JS取り込み-->
+  <script type="text/javascript" src="../assets/scripts/jquery-3.5.1.min.js"></script> <!-- jquery -->
+  <script src="../assets/scripts/common.js"></script>
+  <!--JS取り込み-->
 </body>
 
 </html>
