update favicon,open_graph images

--- a/pages/location.html
+++ b/pages/location.html
@@ -6,9 +6,21 @@
   <link rel="stylesheet" href="../assets/styles/common.css" type="text/css">
   <link rel="stylesheet" href="../assets/styles/location.css" type="text/css">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
-  <link rel="icon" href="../assets/images/icon.png" sizes="32x32" />
-  <link rel="icon" href="../assets/images/icon.png" sizes="192x192" />
-  <link rel="apple-touch-icon-precomposed" href="../assets/images/apple-touch-icon.png" />
+  <link rel="icon" href="../assets/images/favicon/favicon-16x16.png" sizes="16x16" />
+  <link rel="icon" href="../assets/images/favicon/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" href="../assets/images/favicon/favicon-48x48.png" sizes="48x48" />
+  <link rel="icon" href="../assets/images/favicon/favicon-192x192.png" sizes="192x192" />
+  <link rel="apple-touch-icon" href="../assets/images/favicon/apple-touch-icon-57x57.png" sizes="57x57" />
+  <link rel="apple-touch-icon" href="../assets/images/favicon/apple-touch-icon-60x60.png" sizes="60x60" />
+  <link rel="apple-touch-icon" href="../assets/images/favicon/apple-touch-icon-72x72.png" sizes="72x72" />
+  <link rel="apple-touch-icon" href="../assets/images/favicon/apple-touch-icon-76x76.png" sizes="76x76" />
+  <link rel="apple-touch-icon" href="../assets/images/favicon/apple-touch-icon-114x114.png" sizes="114x114" />
+  <link rel="apple-touch-icon" href="../assets/images/favicon/apple-touch-icon-120x120.png" sizes="120x120" />
+  <link rel="apple-touch-icon" href="../assets/images/favicon/apple-touch-icon-144x144.png" sizes="144x144" />
+  <link rel="apple-touch-icon" href="../assets/images/favicon/apple-touch-icon-152x152.png" sizes="152x152" />
+  <link rel="apple-touch-icon" href="../assets/images/favicon/apple-touch-icon-167x167.png" sizes="167x167" />
+  <link rel="apple-touch-icon" href="../assets/images/favicon/apple-touch-icon-180x180.png" sizes="180x180" />
+  <link rel="apple-touch-icon" href="../assets/images/favicon/apple-touch-icon-1024x1024.png" sizes="1024x1024" />
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
